; ModuleID = '/home/carl/AnghaBench/beanstalkd/extr_heap.c_siftdown.c'
source_filename = "/home/carl/AnghaBench/beanstalkd/extr_heap.c_siftdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64)* @siftdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @siftdown(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  br label %6

6:                                                ; preds = %19, %2
  %7 = load i64, i64* %4, align 8
  %8 = sub i64 %7, 1
  %9 = udiv i64 %8, 2
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %4, align 8
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %18, label %12

12:                                               ; preds = %6
  %13 = load i32*, i32** %3, align 8
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* %4, align 8
  %16 = call i64 @less(i32* %13, i64 %14, i64 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %12, %6
  ret void

19:                                               ; preds = %12
  %20 = load i32*, i32** %3, align 8
  %21 = load i64, i64* %4, align 8
  %22 = load i64, i64* %5, align 8
  %23 = call i32 @swap(i32* %20, i64 %21, i64 %22)
  %24 = load i64, i64* %5, align 8
  store i64 %24, i64* %4, align 8
  br label %6
}

declare dso_local i64 @less(i32*, i64, i64) #1

declare dso_local i32 @swap(i32*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
